﻿
              CHANGES - Changelog for GeSHi (geshi.php only)

Changes to the code are listed under the version they occured in, with who suggested
it by each one (if there's nobody listed as suggesting it I dreamed it up :)). Users
who suggested an idea often also provided the code that was used as a basis for the
changes - thanks to all who suggested these ideas and gave me the code to show me how!

Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8
  -  Added language files
     * APT sources.list (milian)
     * Boo (Marcus Griep)
     * CIL (Common Intermediate Language, .NET Assembly) (Marcus Griep)
     * COBOL (Benny Baumann)
     * Gnuplot (milian)
     * KLoneC (Mickael Auger)
     * KLoneC++ (Mickael Auger)
     * POV-Ray (Carl Fürstenberg)
     * PowerShell (Frode Aarebrot)
     * Progress (Marco Aurelio de Pasqual)
     * TypoScript (Jan-Philipp Halle)
     * Xorg configuration (milian)
  -  set_language will not reset any language settings by default anymore.
     You can use the additional $force_reset param for this. (milian)
  -  setup caches for parsing on demand, makes stylesheet generators fast again (milian)
  -  reduce strict errors & notices for language files (milian)
  -  Fixed symbol highlighting with C++ sometimes missing keywords after ; and comments (BenBE)
  -  Improved comment handling with TCL (Lars Hellström, BenBE)
  -  Removed explicit escaping of / in Regular Expressions (BenBE)
  -  Ignoring empty keyword groups when highlighting (milian)
  -  Broken handling with XML comments (BenBE, SF#1849233)
  -  Some more memory & speed optimizations all over GeSHi (milian)
     * Reduced memory overhead when highlighting keywords (BenBE)