@@ -101,13 +101,13 @@ $language_data = array (
     'REGEXPS' => array(
         // Math inner
         1 => array(
-            GESHI_SEARCH => "(\\\\begin\\{)(equation|displaymath|eqnarray|subeqnarray|math|multline|gather|align|alignat|flalign )(\\})(.*)(\\\\end\\{)(equation|displaymath|eqnarray|subeqnarray|math|multline|gather|align|alignat|flalign)(\\})",
-            GESHI_REPLACE => '\\4',
-            GESHI_MODIFIERS => 's',
+            GESHI_SEARCH => "(\\\\begin\\{)(equation|displaymath|eqnarray|subeqnarray|math|multline|gather|align|alignat|flalign)(\\})(.*)(\\\\end\\{)(\\2)(\\})",
+            GESHI_REPLACE => '\4',
+            GESHI_MODIFIERS => 'Us',
             GESHI_BEFORE => '\1\2\3',
             GESHI_AFTER => '\5\6\7'
             ),
-        //  \keywords
+        // \keywords
         2 => array(
             GESHI_SEARCH => "(\\\\)([a-zA-Z]+)",
             GESHI_REPLACE => '\1\2',
@@ -119,23 +119,23 @@ $language_data = array (
         3 => array(
             GESHI_SEARCH => "(\\{)(.*)(\\})",
             GESHI_REPLACE => '\2',
-            GESHI_MODIFIERS => 'U',
+            GESHI_MODIFIERS => 'Us',
             GESHI_BEFORE => '\1',
             GESHI_AFTER => '\3'
             ),
-        // [Option]
+        // [options]
         4 => array(
             GESHI_SEARCH => "(\[)(.+)(\])",
             GESHI_REPLACE => '\2',
-            GESHI_MODIFIERS => 'U',
+            GESHI_MODIFIERS => 'Us',
             GESHI_BEFORE => '\1',
             GESHI_AFTER => '\3'
             ),
-        // Mathe  mit $ ... $
+        // Math mode with $ ... $
         5 => array(
             GESHI_SEARCH => "(\\$)(.+)(\\$)",
             GESHI_REPLACE => '\1\2\3',
-            GESHI_MODIFIERS => 'U',
+            GESHI_MODIFIERS => 'Us',
             GESHI_BEFORE => '',
             GESHI_AFTER => ''
             ),
@@ -155,7 +155,7 @@ $language_data = array (
             GESHI_BEFORE => '',
             GESHI_AFTER => '\\2'
             ),
-        //Structure: Label
+        // Structure: Label
         8 => array(
             GESHI_SEARCH => "(\\\\)(label|pageref|ref|cite)(?=[^a-zA-Z])",
             GESHI_REPLACE => '\\1\\2',
